<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/empire"
    tools:context=".ui.activity.RegisterActivity"
    tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/logo_margin_start_end"
        android:layout_marginEnd="@dimen/logo_margin_start_end"
        android:contentDescription="@string/nyn_logo"
        android:src="@drawable/nyn_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="@dimen/zero_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/reg_field_margin_top"
        android:layout_marginStart="@dimen/login_field_margin_start"
        android:layout_marginEnd="@dimen/login_field_margin_end"
        android:ems="10"
        android:fontFamily="@font/berkshire_swash"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:hint="@string/hint_email_address"
        app:layout_constraintBottom_toTopOf="@id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="@dimen/zero_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/reg_field_margin_top"
        android:layout_marginStart="@dimen/login_field_margin_start"
        android:layout_marginEnd="@dimen/login_field_margin_end"
        android:ems="10"
        android:fontFamily="@font/berkshire_swash"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintBottom_toTopOf="@id/editTextRepeatPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/editTextRepeatPassword"
        android:layout_width="@dimen/zero_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/reg_field_margin_top"
        android:layout_marginStart="@dimen/login_field_margin_start"
        android:layout_marginEnd="@dimen/login_field_margin_end"
        android:ems="10"
        android:fontFamily="@font/berkshire_swash"
        android:hint="@string/hint_repeat_password"
        android:inputType="textPassword"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:autofillHints=""
        tools:ignore="InconsistentLayout"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_button_margin_start"
        android:layout_marginEnd="@dimen/login_button_margin_end"
        android:paddingStart="@dimen/login_button_padding_start"
        android:paddingEnd="@dimen/login_button_padding_end"
        android:text="@string/button_text_register"
        android:textColor="@android:color/black"
        android:textSize="@dimen/login_button_text_size"
        app:layout_constraintBottom_toTopOf="@id/textViewLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPassword" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/login_link_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/login_link_text_size"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94"/>

</androidx.constraintlayout.widget.ConstraintLayout>