<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_above="@+id/iv_new_york_times">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/article_detail_app_bar_height"
            android:background="?colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:elevation="@dimen/article_detail_app_bar_elevation">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                app:expandedTitleMarginStart="@dimen/article_detail_collapsing_toolbar_margin_start"
                app:expandedTitleMarginEnd="@dimen/article_detail_collapsing_toolbar_margin_end"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:maxLines="3"
                app:expandedTitleTextAppearance="@style/HeaderTitleStyle"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/articleDetailPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        android:src="@drawable/newspaper"
                        android:contentDescription="@string/article_image"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/article_detail_headline_height"
                        android:padding="@dimen/article_detail_headline_padding"
                        android:textSize="@dimen/article_detail_headline_text_size"
                        android:gravity="center"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/scrim"/>

                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/appToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/article_detail_toolbar_height"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/meta_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#333"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/article_detail_metabar_padding"
                    android:layout_marginBottom="@dimen/article_detail_metabar_margin_bottom">

                    <TextView
                        android:id="@+id/article_byline"
                        style="?android:attr/textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textSize="@dimen/article_detail_article_by_line_text_size"/>

                </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/article_body"
                    style="?android:attr/textAppearanceMedium"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="@dimen/article_detail_body_text_size_min"
                    android:autoSizeMaxTextSize="@dimen/article_detail_body_text_size_max"
                    android:autoSizeStepGranularity="@dimen/article_detail_body_text_size_granularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/article_detail_body_margin"
                    android:layout_marginRight="@dimen/article_detail_body_margin"
                    android:paddingBottom="@dimen/article_detail_body_padding_bottom"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorAccent"
                    android:textColorLink="@android:color/holo_blue_light"
                    android:lineSpacingMultiplier="1.25"
                    android:textSize="@dimen/article_detail_body_text_size"/>

            </FrameLayout>

            <TextView
                android:id="@+id/articleLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/article_detail_body_margin"
                android:layout_marginRight="@dimen/article_detail_body_margin"
                android:paddingBottom="@dimen/article_detail_link_padding_bottom"
                android:textSize="@dimen/article_detail_article_link_text_size"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/article_link"/>

        </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/article_detail_fab_margin"
            android:layout_gravity="bottom|end"
            android:elevation="8dp"
            android:src="@drawable/fab_selector"
            app:pressedTranslationZ="@dimen/article_detail_fab_prz"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
        android:id="@+id/iv_new_york_times"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nyt_attr_height"
        android:src="@drawable/data_nytimes"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/nyt_attribution"/>

    <ImageView
        android:id="@+id/iv_loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/empire"
        android:contentDescription="@string/nyn_logo"/>

</RelativeLayout>